<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor"
    android:hapticFeedbackEnabled="false"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/emailedittext"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="204dp"
        android:backgroundTint="?attr/tintcolor"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="?attr/textcolor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcometext"
        android:layout_width="291dp"
        android:layout_height="82dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/welcome_msg"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="?attr/textcolor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/emailedittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.318" />

    <TextView
        android:id="@+id/emaillabel"
        android:layout_width="70dp"
        android:layout_height="26dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:text="@string/edit1_title"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="?attr/textcolor"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcometext" />

    <EditText
        android:id="@+id/pwdedittext"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="?attr/tintcolor"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="?attr/textcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelpwd" />

    <TextView
        android:id="@+id/labelpwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="27dp"
        android:text="@string/edit2_title"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="?attr/textcolor"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailedittext" />

    <Button
        android:id="@+id/siginbtn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="145dp"
        android:background="@android:color/holo_blue_dark"
        android:elevation="30dp"
        android:text="@string/btn_text"
        android:textColor="?attr/buttontext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwdedittext" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="79dp"
        android:layout_height="20dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="164dp"
        android:text="@string/newuser"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/siginbtn" />

    <Button
        android:id="@+id/signupbtn"
        android:layout_width="104dp"
        android:layout_height="48dp"
        android:layout_marginStart="153dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="154dp"
        android:backgroundTint="@drawable/bgbutton"
        android:elevation="30dp"
        android:text="@string/signup"
        android:textColor="?attr/buttontext"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="56dp"
        android:text="@string/switchtext"
        android:textColor="?attr/textcolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>



